update swagger/openapi3
