# app/Models/Post.php
@@ -12,6 +12,58 @@ class Post extends Model implements AuthenticatableContract, AuthorizableContrac
 {
     use Authenticatable, Authorizable, HasFactory;
 
+    /**
+     *  @OA\Schema(
+     *      schema="Posts",
+     *      @OA\Property(
+     *          property="id",
+     *          type="integer",
+     *          format="int64"
+     *      ),
+     *      @OA\Property(
+     *          property="title",
+     *          type="string"
+     *      ),
+     *      @OA\Property(
+     *          property="body",
+     *          type="string"
+     *      ),
+     *      @OA\Property(
+     *          property="view",
+     *          type="integer",
+     *          format="int64"
+     *      ),
+     *      @OA\Property(
+     *          property="create_at",
+     *          type="string",
+     *          format="date-time"
+     *      ),
+     *      @OA\Property(
+     *          property="update_at",
+     *          type="string",
+     *          format="date-time"
+     *      )
+     * )
+     */
+
+    /**
+     *  @OA\Schema(
+     *      schema="SamplePostsInsert",
+     *      @OA\Property(
+     *          property="title",
+     *          type="string"
+     *      ),
+     *      @OA\Property(
+     *          property="body",
+     *          type="string"
+     *      ),
+     *      @OA\Property(
+     *          property="views",
+     *          type="integer",
+     *          format="int64"
+     *      )
+     * )
+     */
     protected $fillable = [
         'title', 'body', 'views'
     ];
